--- a/CSS_Inicial/Selectores/styles1.css
+++ b/CSS_Inicial/Selectores/styles1.css
@@ -11,15 +11,36 @@ header {
     color: white;
     text-align: center;
     height: 15vh; /* 15% de la altura del viewport */
-    line-height: 15vh; /* Centrado vertical del texto */
+    /* Centrado vertical del texto */
     position: sticky;
     top: 0;
     z-index: 1000;
 }
 
+header ul {
+    list-style: none;
+    width: 80%;
+    margin: 0 auto;
+
+    li{
+        display: inline-block;
+    }
+}
+
+li a {
+    text-decoration: none;
+    margin: 0 10px;
+    color: #ffffff;
+    font-weight: 800;
+}
+
+li a:hover{
+    color: #00404080;
+}
+
 /* Sección principal estilizada con vh y vw */
 main {
-    height: 70vh; /* 70% de la altura del viewport */
+    /* 70% de la altura del viewport */
     background-color: #ffffff;
     padding: 5vw; /* 5% del ancho del viewport */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
