--- a/CSS_Inicial/Menu_con_transiciones/styles.css
+++ b/CSS_Inicial/Menu_con_transiciones/styles.css
@@ -4,7 +4,11 @@
 
 
 .menu {
-    display: block;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+  
     position: relative;
     height: 76px;
     width: 120px;
@@ -96,5 +100,5 @@
 
   ul{
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
   }
